--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: go
-go: 
-  - 1.4
-  - tip
+
+sudo: false
+
+go:
+  - 1.4.3
+  - 1.5.3
+
 script:
-  - go build -v
-  - go test -v -race
+  - export GOMAXPROCS=$(nproc)
+  - go build ./...
+  - go test -race ./...
