--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,18 @@ language: go
 
 sudo: false
 
+addons:
+  apt:
+    packages:
+    - moreutils
+
 go:
   - 1.4.3
-  - 1.5.3
+  - 1.5.4
+  - 1.6.2
 
 script:
   - export GOMAXPROCS=$(nproc)
+  - gofmt -s -l . | ifne false
   - go build ./...
   - go test -race ./...
