refactor so that the server can't maliciously connect to any arbitrary port on the client

--- a/usage-example/client-config.json
+++ b/usage-example/client-config.json
@@ -1,10 +1,13 @@
 {
-    "DebugLog": false,
+  "DebugLog": false,
 	"ClientIdentifier": "TestClient1",
 	"ServerHost": "localhost",
 	"ServerTunnelControlPort": 9056,
 	"ServerManagementPort":  9057,
-    "UseTls": true,
+	"UseTls": true,
+	"ServiceToLocalAddrMap": {
+		"fooService": "127.0.0.1:9001"
+	},
 	"CaCertificateFile": "InternalCA+chain.crt",
 	"ClientTlsKeyFile": "TestClient1@example.com.key",
 	"ClientTlsCertificateFile": "TestClient1@example.com+chain.crt"
