--- a/usage-example/client-config.json
+++ b/usage-example/client-config.json
@@ -1,14 +1,12 @@
 {
   "DebugLog": false,
 	"ClientIdentifier": "TestClient1",
-	"ServerHost": "localhost",
-	"ServerTunnelControlPort": 9056,
-	"ServerManagementPort":  9057,
+	"ServerAddr": "localhost:9056",
 	"UseTls": true,
 	"ServiceToLocalAddrMap": {
 		"fooService": "127.0.0.1:9001"
 	},
-	"CaCertificateFile": "InternalCA+chain.crt",
+	"CaCertificateFilesGlob": "InternalCA+chain.crt",
 	"ClientTlsKeyFile": "TestClient1@example.com.key",
 	"ClientTlsCertificateFile": "TestClient1@example.com+chain.crt"
 }
