--- a/usage-example/client-config.json
+++ b/usage-example/client-config.json
@@ -1,6 +1,6 @@
 {
   "DebugLog": false,
-	"ClientIdentifier": "TestClient1",
+	"ClientId": "TestClient1",
 	"ServerAddr": "localhost:9056",
 	"ServiceToLocalAddrMap": {
 		"fooService": "127.0.0.1:9001"
